
syntax = "proto3";

import "google/protobuf/empty.proto";

package projector;

option java_multiple_files = true;
option java_package = "org.stu.projector";
option java_outer_classname = "ProjectorProto";

service Projector{
  rpc activateProjector(google.protobuf.Empty) returns (ProjectorOnStatus){}
  rpc deActivateProjector(google.protobuf.Empty) returns (ProjectorOffStatus){}
  rpc setInputType(InputType) returns (InputType){}
  rpc listInputs(google.protobuf.Empty) returns (stream InputType){}
  rpc increaseBrightness(BrightnessLevel) returns (BrightnessLevel){}
  rpc decreaseBrightness(BrightnessLevel) returns (BrightnessLevel){}
  rpc setAspectRatio(AspectRatio) returns (AspectRatio){}
  rpc listRatios(google.protobuf.Empty) returns (stream AspectRatio){}
  rpc setResolution(Resolution) returns (Resolution){}
  rpc listAvailableResolutions(google.protobuf.Empty) returns (stream Resolution){}
  rpc setOrientation(Orientation) returns (Orientation){}
  rpc listAvailableOrientations(google.protobuf.Empty) returns (stream Orientation){}
}

message ProjectorOnStatus{
    string onStatus = 1;
}

message ProjectorOffStatus{
    string offStatus = 1;
}

message InputType{
    string supported_inputs = 1;
}

message AllInputTypes{
    repeated InputType inputTypes = 1;
}

message BrightnessLevel{
    int32 currentBrightness = 1;
}

message AspectRatio{
    string ratio = 1;
}

message AllRatios{
    repeated AspectRatio aspectRatios = 1;
}

message Resolution{
    string resOption = 1;
    bool supported = 2;
}

message ResolutionOptions{
    repeated Resolution resolutions = 1;
}

message Orientation{
    string orientation = 1;
}

message OrientationOptions{
    repeated Orientation orientations = 1;
}

